[gd_scene load_steps=2 format=3 uid="uid://dvfv1qsj4npmd"]

[ext_resource type="Script" uid="uid://dae8qeqrokn2o" path="res://ui/collections/collection_editor_tile/collection_editor_tile.gd" id="1_m3qnu"]

[node name="CollectionEditorTile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1002.0
offset_bottom = -498.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3qnu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="MoveLeftButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 32)
layout_mode = 2
text = "<"

[node name="OrderLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="MoveRightButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 32)
layout_mode = 2
text = ">"

[node name="DeleteButton" type="Button" parent="."]
custom_minimum_size = Vector2(32, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MoveLeftButton" to="." method="_on_btn_move_left_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/MoveRightButton" to="." method="_on_btn_move_right_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
